fed/css/pagelibs.css
/* ... */
  .component-fifty-fifty-fullbleed.bg-blue .col-image:after {
    background: #1A3E6C; }
  .component-fifty-fifty-fullbleed.bg-blue-muted .col-image:before {
    border-bottom-color: #506B8F; }
  .component-fifty-fifty-fullbleed.bg-blue-muted .col-image:after {
    background: #506B8F; }
  .component-fifty-fifty-fullbleed.bg-green .col-image:before {
    border-bottom-color: #00A56A; }
  .component-fifty-fifty-fullbleed.bg-green .col-image:after {
    background: #00A56A; }
  .component-fifty-fifty-fullbleed.bg-green-muted .col-image:before {
    border-bottom-color: #35BA8C; }
  .component-fifty-fifty-fullbleed.bg-green-muted .col-image:after {
    background: #35BA8C; }
  .component-fifty-fifty-fullbleed.bg-lime .col-image:before {
    border-bottom-color: #BDD441; }
  .component-fifty-fifty-fullbleed.bg-lime .col-image:after {
    background: #BDD441; }
  .component-fifty-fifty-fullbleed.bg-lime-muted .col-image:before {
    border-bottom-color: #CBDD66; }
  .component-fifty-fifty-fullbleed.bg-lime-muted .col-image:after {
    background: #CBDD66; }
  .component-fifty-fifty-fullbleed.bg-teal .col-image:before {
    border-bottom-color: #007378; }
  .component-fifty-fifty-fullbleed.bg-teal .col-image:after {
    background: #007378; }
  .component-fifty-fifty-fullbleed.bg-teal-muted .col-image:before {
    border-bottom-color: #389398; }
  .component-fifty-fifty-fullbleed.bg-teal-muted .col-image:after {
    background: #389398; }
  .component-fifty-fifty-fullbleed.bg-dk-gray .col-image:before {
    border-bottom-color: #323F48; }
  .component-fifty-fifty-fullbleed.bg-dk-gray .col-image:after {
    background: #323F48; }
  .component-fifty-fifty-fullbleed.bg-md-gray .col-image:before {
    border-bottom-color: #7C878E; }
  .component-fifty-fifty-fullbleed.bg-md-gray .col-image:after {
    background: #7C878E; }
  .component-fifty-fifty-fullbleed.bg-gray .col-image:before {
    border-bottom-color: #D0D3D3; }
  .component-fifty-fifty-fullbleed.bg-gray .col-image:after {
    background: #D0D3D3; }
  .component-fifty-fifty-fullbleed.bg-lt-gray .col-image:before {
    border-bottom-color: #F0F0F0; }
  .component-fifty-fifty-fullbleed.bg-lt-gray .col-image:after {
    background: #F0F0F0; }
  @media (min-width: 768px) {
    .component-fifty-fifty-fullbleed .col-image {
      background-size: cover;
      bottom: 0;
      left: 0;
      position: absolute;
      right: 50%;
      top: 0; }
      .component-fifty-fifty-fullbleed .col-image img {
        visibility: hidden; }
      .component-fifty-fifty-fullbleed .col-image:before {
        display: none; }
      .component-fifty-fifty-fullbleed .col-image:after {
        bottom: 0;
        content: '';
        display: block;
        position: absolute;
        right: 0;
        top: 0;
        width: 60px;
        -webkit-clip-path: polygon(100% 0, 0 100%, 100% 100%);
        clip-path: polygon(100% 0, 0 100%, 100% 100%); }
    .component-fifty-fifty-fullbleed.image-right .col-image:after {
      left: 0;
      right: auto;
      -webkit-clip-path: polygon(0 0, 0 100%, 100% 0);
      clip-path: polygon(0 0, 0 100%, 100% 0); } }
  @media (min-width: 768px) {
    .is-ie .component-fifty-fifty-fullbleed .col-image:after {
      right: -10%;
      transform: skewX(-5deg);
      transform-origin: 100%;
      width: 90px; }
    .is-ie .component-fifty-fifty-fullbleed.image-right .col-image:after {
      left: -10%;
      right: auto;
      transform: skewX(-5deg); } }

/**
 *  Main css for card
 */
.component-card {
  background: #FFFFFF;
  margin: 0 0 20px;
  position: relative;
  text-align: left; }
  .component-card header h1, .component-card header h2, .component-card header h3, .component-card header h4, .component-card header h5, .component-card header h6 {
    color: #1A3E6C;
    font-weight: 400; }
  .component-card .content {
    padding: 15px 20px 20px; }
    .component-card .content .type {
      color: #323F48;
      font-size: 16px;
      font-weight: 500;
      margin: 0 0 45px;
      padding: 0 0 10px;
      position: relative;
      text-transform: uppercase; }
      .component-card .content .type:after {
        background: #BDD441;
        bottom: 0;
        content: '';
        display: block;
        height: 3px;
        position: absolute;
        width: 20px; }
    .component-card .content .meta {
      color: #7C878E;
      font-size: 16px;
      font-weight: 500;
      margin: 0 0 15px; }
    .component-card .content .body {
      color: #323F48;
      font-size: 16px;
      font-weight: 300;
      line-height: 26px;
      margin: 20px 0 0; }
    .component-card .content .cta {
      margin: 20px 0 0; }
  @media (min-width: 768px) {
    .component-card {
      margin: 0 0 30px; }
      .component-card .content {
        padding: 20px 30px 30px; } }
  @media (min-width: 992px) {
    .component-card .content {
      padding-bottom: 120px; }
      .component-card .content .cta {
        bottom: 30px;
        position: absolute; } }

/**
 *  Main css for text
 */
.component-text .component-header {
  margin: 0; }
  .component-text .component-header .article-share {
    display: flex;
    justify-content: flex-end;
    margin: 0 0 60px; }
  .component-text .component-header .meta {
    color: #7C878E;
    font-size: 14px;
    font-weight: 500;
    line-height: 16px;
    margin: 0 0 30px; }
  .component-text .component-header h1 {
    font-size: 26px;
    line-height: 34px; }

.component-text .cta {
  margin: 40px 0 20px; }

@media (min-width: 768px) {
  .component-text .component-header .article-share {
    margin: 0 0 45px; } }

@media (min-width: 992px) {
  .component-text .component-header h1 {
    font-size: 34px;
    line-height: 42px; } }

/**
 *  Main css for card-icon
 */
.component-card-icon {
  margin: 0 30px 40px; }
  .component-card-icon .image {
    margin: 0 0 30px; }
  .component-card-icon header h5 {
    font-weight: 700; }
  @media (min-width: 768px) {
    .component-card-icon {
      margin: 0 0 60px; } }
/* ... */

